# phishing-detector

./: .gitignore  Modelfile  README.md  main.py  pyproject.toml
